<resources>
    <string name="app_name">生活邦</string>
    <!--售后热线-->
    <string name="service_tel">95555</string>
    <string name="service">售后热线</string>
    <string name="idea">意见反馈</string>
    <string name="empty"> </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home_classify">分类</string>
    <string name="home_scan">扫一扫</string>
    <string name="today_hot">今日热卖</string>
    <string name="special">特卖专区</string>
    <string name="hot">热销精品</string>
    <string name="rob">疯狂抢购</string>
    <!--分类-->
    <string name="classify">全部分类</string>
    <string name="hot_recommend">热门推荐</string>
    <string name="fruits_vegetables">生鲜果蔬</string>
    <string name="household_cleaning">家庭清洁</string>
    <string name="laundry">预约洗衣</string>
    <string name="nurse">预约保姆</string>
    <string name="import_commodity">进口商品</string>
    <string name="food">食品饮料</string>
    <string name="grain_oil">粮油副食</string>
    <string name="body_care">个人洗护</string>
    <string name="infant_mom">母婴用品</string>
    <string name="more">更多</string>
    <!--个人主页-->
    <string name="setting">设置</string>
    <string name="my_favorite">我的收藏</string>
    <string name="my_spoor">我的足迹</string>
    <string name="my_coupon">优惠券</string>
    <string name="my_order_all">查看全部订单</string>
    <string name="my_order">我的订单</string>
    <string name="recommend">为你推荐</string>
    <!--订单状态-->
    <string name="order_all">全部订单</string>
    <string name="order_pay">待付款</string>
    <string name="order_send">待发货</string>
    <string name="order_receipt">待收货</string>
    <string name="order_appraise">待评价</string>
    <!--设置-->
    <string name="my_about">个人资料</string>
    <string name="new_message">新消息通知</string>
    <string name="my_manage_address">地址管理</string>
    <string name="about_shb">关于手机生活邦</string>
    <string name="log_out">退出当前账户</string>
    <!--订单提交-->
    <string name="commodity_week">七天退换</string>
    <string name="commodity_no_7">此商品性质不支持7天退货</string>
    <string name="push_order">提交订单</string>
    <string name="affirm_order">确认订单</string>
    <string name="consignee_helper">(收货不便时，可选择免费代收服务)</string>
    <string name="title_comment">发表评价</string>
    <!--地址-->
    <string name="menu_manage">管理</string>
    <string name="default_address">默认地址</string>
    <string name="setting_default_address">设为默认</string>
    <string name="edit">编辑</string>
    <string name="remove">删除</string>
    <string name="manage_address">收货地址管理</string>
    <string name="select_address">选择收货地址</string>
    <string name="keep">保存</string>
    <string name="consignee">收货人姓名：</string>
    <string name="consignee_tel">收货人联系方式：</string>
    <string name="address">所在区域：</string>
    <string name="remove_address">删除地址</string>
    <string name="add_address">新增收货地址</string>
    <string name="scan">扫一扫</string>
    <string name="message">消息</string>
    <string name="my">我的</string>
    <string name="pay">订单支付</string>
    <string name="ok">确定</string>
    <string name="integral">积分</string>
    <string name="user_name">用户名</string>
    <string name="icon">头像</string>
    <string name="nickname">昵称</string>
    <string name="sex">性别</string>
    <string name="delivery_address">送货地址:</string>
    <string name="coupon">优惠方式:</string>
    <string name="similar">相似商品</string>
    <string name="all_appraise">查看全部评价</string>
    <string name="param">产品参数:</string>
    <!--登录注册-->
    <string name="login">登录</string>
    <string name="logining">正在登录 请稍后…</string>
    <string name="phone">已验证手机号:</string>
    <string name="register">注册</string>
    <string name="registering">正在注册 请稍后…</string>
    <!--util-->
    <string name="$">￥</string>
    <string name="buy">人已购买</string>
    <string name="sold">已售</string>
    <string name="portion">份</string>
</resources>
