<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="horizontal"
    android:paddingBottom="@dimen/dimen_10dp"
    android:paddingTop="@dimen/dimen_10dp">

    <TextView
        android:id="@+id/tv_offer_home"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/dimen_30dp"
        android:background="@drawable/text_frame"
        android:drawableLeft="@mipmap/home_offer"
        android:gravity="center"
        android:text="@string/app_name" />

    <TextView
        android:id="@+id/tv_offer_tel"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/dimen_30dp"
        android:layout_marginLeft="@dimen/dimen_5dp"
        android:background="@drawable/text_frame"
        android:drawableLeft="@mipmap/tel"
        android:gravity="center"
        android:text="@string/service" />

    <TextView
        android:id="@+id/tv_offer_idea"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/dimen_30dp"
        android:layout_marginLeft="@dimen/dimen_5dp"
        android:background="@drawable/text_frame"
        android:drawableLeft="@mipmap/pen"
        android:gravity="center"
        android:text="@string/idea" />
</LinearLayout>
