<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="data"
            type="com.example.icogn.mshb.shb.main.my.setting.AboutMeBean" />
    </data>

    <LinearLayout
        android:id="@+id/activity_about_me"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background"
        android:orientation="vertical">

        <com.example.icogn.mshb.view.MyToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:minHeight="?attr/actionBarSize"
            app:navigationIcon="@drawable/left_back"
            app:titleColor="@color/tab_color"
            app:titleText="@string/my_about"
            app:titleTextSize="@dimen/dimen_10sp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_10dp"
            android:background="@color/white"
            android:onClick="upIcon"
            android:orientation="horizontal"
            android:padding="@dimen/dimen_10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/icon" />

            <ImageView
                android:layout_width="@dimen/dimen_80dp"
                android:layout_height="@dimen/dimen_80dp"
                android:layout_alignParentRight="true"
                android:layout_gravity="right"
                android:layout_marginRight="@dimen/dimen_20dp"
                android:src="@drawable/user_icon"
                app:circle="@{data.icon}" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:src="@drawable/right" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_50dp"
            android:layout_marginTop="@dimen/dimen_1dp"
            android:background="@color/white"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="@dimen/dimen_10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_name" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/dimen_20dp"
                android:gravity="right"
                android:text="@{data.name}" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_50dp"
            android:layout_marginTop="@dimen/dimen_1dp"
            android:background="@color/white"
            android:gravity="center_vertical"
            android:onClick="editNickname"
            android:orientation="horizontal"
            android:padding="@dimen/dimen_10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nickname" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableRight="@drawable/right"
                android:gravity="right"
                android:text="@{data.nickname}" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_50dp"
            android:layout_marginTop="@dimen/dimen_1dp"
            android:background="@color/white"
            android:gravity="center"
            android:onClick="editSex"
            android:orientation="horizontal"
            android:padding="@dimen/dimen_10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sex" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableRight="@drawable/right"
                android:gravity="right"
                android:text="@{data.sex}" />

        </LinearLayout>
    </LinearLayout>
</layout>
