<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="data"
            type="com.example.icogn.mshb.entity.AddressEntity" />

        <import type="android.view.View" />

        <import type="com.example.icogn.mshb.Version" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background"
        android:clipToPadding="true"
        android:fitsSystemWindows="true"
        android:orientation="vertical">

        <com.example.icogn.mshb.view.MyToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:minHeight="?attr/actionBarSize"
            app:navigationIcon="@drawable/left_back"
            app:titleColor="@color/tab_color"
            app:titleTextSize="@dimen/dimen_10sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_10dp"
            android:background="@color/background" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dimen_1dp"
            android:background="@color/white"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:padding="@dimen/dimen_10dp"
                android:text="@string/consignee" />

            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:background="@color/white"
                android:ellipsize="end"
                android:lines="1"
                android:padding="@dimen/dimen_10dp"
                android:text="@={data.name}" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dimen_1dp"
            android:background="@color/white"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:padding="@dimen/dimen_10dp"
                android:text="@string/consignee_tel" />

            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2.5"
                android:background="@color/white"
                android:inputType="number"
                android:lines="1"
                android:padding="@dimen/dimen_10dp"
                android:text="@={data.tel}" />

            <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:onClick="actionTel"
                android:src="@drawable/ic_add_black_24dp"
                android:visibility="@{Version.isM?View.GONE:View.VISIBLE}" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dimen_1dp"
            android:background="@color/white"
            android:gravity="center_vertical"
            android:onClick="scanAddress"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:padding="@dimen/dimen_10dp"
                android:text="@string/address" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:gravity="right"
                android:padding="@dimen/dimen_10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:gravity="right"
                    android:lines="1"
                    android:text="@={data.province}" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:gravity="right"
                    android:lines="1"
                    android:text="@={data.city}" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawablePadding="@dimen/dimen_10dp"
                    android:drawableRight="@drawable/right"
                    android:ellipsize="end"
                    android:gravity="right"
                    android:hint="请选择"
                    android:lines="1"
                    android:text="@={data.county}" />

            </LinearLayout>

        </LinearLayout>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:gravity="left|top"
            android:hint="详细地址："
            android:lines="3"
            android:padding="@dimen/dimen_10dp"
            android:text="@={data.address}"
            android:textSize="@dimen/dimen_14sp" />


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_10dp"
            android:background="@color/white">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/dimen_10dp"
                android:text="@string/setting_default_address" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:button="@drawable/cb"
                android:checked="@{data.isDefaultAddress}"
                android:onClick="defaultAddress"
                android:padding="@dimen/dimen_10dp" />
        </RelativeLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_10dp"
            android:background="@color/white"
            android:onClick="remove"
            android:padding="@dimen/dimen_10dp"
            android:text="@string/remove_address"
            android:textColor="@color/red_week"
            android:visibility="@{data.id==null?View.GONE:View.VISIBLE}" />
    </LinearLayout>
</layout>