<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <!-- TODO: Update blank fragment layout -->


    <in.srain.cube.views.ptr.PtrFrameLayout
        android:id="@+id/pfl_refresh"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:ptr_keep_header_when_refresh="true"
        app:ptr_pull_to_fresh="true">

        <android.support.v4.widget.NestedScrollView
            android:id="@+id/nsv_home"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true"
            android:fitsSystemWindows="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">


                <ImageView
                    android:id="@+id/iv_master"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:adjustViewBounds="true"
                    android:src="@mipmap/shouye" />
                <!--分类-->
                <android.support.v7.widget.RecyclerView
                    android:id="@+id/rv_classify"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
                <!--疯抢-->
                <include layout="@layout/layout_rob" />
                <!--新闻快讯-->
                <include layout="@layout/layout_new" />

                <!--今日热卖-->
                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dimen_1dp" />

                <TextView
                    android:id="@+id/tv_today_hot"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dimen_50dp"
                    android:background="@color/halving_line"
                    android:drawableEnd="@mipmap/right"
                    android:gravity="center_vertical"
                    android:paddingEnd="@dimen/dimen_5dp"
                    android:paddingLeft="@dimen/dimen_20dp"
                    android:text="@string/today_hot"
                    android:textSize="@dimen/dimen_16sp" />

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/rv_today_hot"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
                <!--&lt;!&ndash;特卖专区&ndash;&gt;-->
                <!--<TextView-->
                <!--android:id="@+id/tv_special"-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="@dimen/dimen_50dp"-->
                <!--android:background="@color/home_background"-->
                <!--android:drawableEnd="@mipmap/right"-->
                <!--android:gravity="center_vertical"-->
                <!--android:paddingEnd="@dimen/dimen_5dp"-->
                <!--android:paddingLeft="@dimen/dimen_20dp"-->
                <!--android:text="@string/special"-->
                <!--android:textSize="@dimen/dimen_16sp"/>-->

                <!--<android.support.v7.widget.RecyclerView-->
                <!--android:id="@+id/rv_special"-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content"/>-->
                <!--热销-->
                <TextView
                    android:id="@+id/tv_hot"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dimen_50dp"
                    android:background="@color/halving_line"
                    android:drawableEnd="@mipmap/right"
                    android:gravity="center_vertical"
                    android:paddingEnd="@dimen/dimen_5dp"
                    android:paddingLeft="@dimen/dimen_20dp"
                    android:text="@string/hot"
                    android:textSize="@dimen/dimen_16sp" />

                <android.support.design.widget.TabLayout
                    android:id="@+id/tl_hot"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dimen_80dp"
                    android:background="@color/gray"
                    android:padding="@dimen/dimen_1dp"
                    app:tabBackground="@color/white"
                    app:tabGravity="center"
                    app:tabIndicatorColor="@color/tab_hot_text_selected"
                    app:tabIndicatorHeight="@dimen/dimen_1dp"
                    app:tabMode="scrollable"
                    app:tabPaddingEnd="@dimen/dimen_1dp"
                    app:tabPaddingStart="@dimen/dimen_1dp"
                    app:tabSelectedTextColor="@color/tab_hot_text_selected"
                    app:tabTextColor="@color/tab_hot_text_pressed" />

                <android.support.v4.view.ViewPager
                    android:id="@+id/vp_hot"
                    android:layout_width="match_parent"
                    android:layout_height="500dp" />
            </LinearLayout>
        </android.support.v4.widget.NestedScrollView>
    </in.srain.cube.views.ptr.PtrFrameLayout>

    <!--<android.support.v7.widget.Toolbar-->
    <!--android:id="@+id/toolbar"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="wrap_content"-->
    <!--app:theme="@style/toolbarTheme">-->

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_50dp">

        <View
            android:id="@+id/view_background"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#ffffff" />

        <TextView
            android:id="@+id/tv_scan"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/dimen_5dp"
            android:drawableTop="@drawable/scan"
            android:padding="@dimen/dimen_5dp"
            android:text="@string/scan"
            android:textColor="@color/white"
            android:textSize="@dimen/dimen_12sp" />

        <TextView
            android:id="@+id/tv_seek"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/dimen_10dp"
            android:layout_marginRight="@dimen/dimen_10dp"
            android:layout_toLeftOf="@+id/tv_message"
            android:layout_toRightOf="@id/tv_scan"
            android:background="@drawable/text_seek"
            android:drawableLeft="@drawable/seek"
            android:hint="生活邦"
            android:padding="@dimen/dimen_10dp"
            android:textColorHint="@color/white" />

        <TextView
            android:id="@+id/tv_message"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:layout_marginRight="@dimen/dimen_5dp"
            android:drawableTop="@drawable/message"
            android:padding="@dimen/dimen_5dp"
            android:text="@string/message"
            android:textColor="@color/white"
            android:textSize="@dimen/dimen_12sp" />
    </RelativeLayout>
    <!--</android.support.v7.widget.Toolbar>-->
</RelativeLayout>
